--- a/src/HTML/Home Page.html
+++ b/src/HTML/Home Page.html
@@ -5,45 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KALOS</title>
   <link rel="stylesheet" href="../CSS/Home Page.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Scroll Progress Bar -->
+  <div class="scroll-progress"></div>
+  
+  <!-- Back to Top Button -->
+  <a href="#" class="back-to-top">↑</a>
 
-  <header>
-    <nav class="navbar">
-      <div class="logo">KALOS</div>
-      <ul class="nav-links">
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Our Collection</a></li>
-        <li><a href="#">New Collection</a></li>
-        <li><a href="#">Sale</a></li>
-      </ul>
-    </nav>
-  </header>
+  <!-- Navbar -->
+  <header class="navbar">
+        <div class="nav-left">
+            <a href="../HTML/Home Page.html">Shop</a>
+            <a href="../HTML/colection.html">Our Collection</a>
+        </div>
+        <div class="nav-center">
+            <h1>KALOS</h1>
+        </div>
+        <div class="nav-right">
+            <a href="../HTML/colection.html">New Collection</a>
+            <a href="../HTML/Home Page.html">Kalos</a>
+        </div>
+    </header>
 
-  <section class="hero">
+  <!-- Hero Section -->
+  <section class="hero fade-in">
     <img src="../../asset/FotoModel.jpg" alt="Hero Image">
-    <div class="hero-text fade-in">
-      <h1>SEE OUR BRAND NEW COLLECTION</h1>
+    <div class="hero-text">
+      <h1>SEE OUR BRAND NEW<br>COLLECTION</h1>
       <a href="#" class="btn hover-grow">See More</a>
     </div>
   </section>
 
-  <section class="products film-strip-top film-strip-bottom">
-    <h2 class="section-title fade-in">READY-TO-WEAR</h2>
+  <!-- Ready to Wear -->
+  <section class="products fade-in film-strip-top film-strip-bottom">
+    <h2 class="section-title">READY-TO-WEAR</h2>
     <div class="product-grid">
-      <div class="product-card hover-up fade-in">
+      <div class="product-card hover-up">
         <img src="../../asset/baju1.png" alt="Baju">
         <h3>BAJU</h3>
         <a href="#" class="see-more">See more →</a>
       </div>
-      <div class="product-card hover-up fade-in" style="transition-delay: 0.1s;">
+      <div class="product-card hover-up">
         <img src="../../asset/baju 2.png" alt="Baju">
         <h3>BAJU</h3>
         <a href="#" class="see-more">See more →</a>
       </div>
-      <div class="product-card hover-up fade-in" style="transition-delay: 0.2s;">
+      <div class="product-card hover-up">
         <img src="../../asset/baju 3.png" alt="Baju">
         <h3>BAJU</h3>
         <a href="#" class="see-more">See more →</a>
@@ -51,49 +62,95 @@
     </div>
   </section>
 
-  <section class="quality film-strip-top film-strip-bottom">
-    <h2 class="section-title quality-title fade-in">UNMATCHED QUALITY</h2>
-    <div class="quality-content fade-in" style="transition-delay: 0.1s;">
-      <img src="../../asset/unmatchedQuality.jpg" alt="Quality Baju">
-      <a href="#" class="btn hover-grow">SEE MORE</a>
+  <section class="Quality">
+    <div class="UNMATCHED-Text">
+      <h1> UNMATCHED</h1>
     </div>
+    <div class="Quality-Text">
+      <h1> QUALITY</h1>
+    </div>
+
+    <div class="Gambar-Baju">
+      <img src="../../asset/baju 2.png" alt="BAJUU">
+    </div>
+
+  <div class="road-section">
+  <div class="road-container"></div>
+  
+</div>
+</div>
+
+
   </section>
 
+   
+  
+
+  <!-- Meet Kalos -->
   <section class="about fade-in">
     <div class="about-content">
-        <div class="about-img">
-          <img src="assets/kalos-face.png" alt="Meet Kalos">
-        </div>
-        <div class="about-text">
-          <h2>MEET KALOS</h2>
-          <p>KALOS can help users choose their daily outfits by analyzing photos of themselves and their wardrobe. By uploading a picture, the AI detects features such as skin tone, body shape, and clothing style, then provides personalized outfit recommendations for different occasions...</p>
-          <a href="#" class="btn hover-grow">Meet Kalos</a>
-        </div>
+      <div class="about-img">
+        <img src="../../asset/AI.png" alt="Meet Kalos">
+      </div>
+      <div class="about-text">
+        <h2>MEET KALOS</h2>
+        <p>KALOS can help users choose their daily outfits by analyzing photos of themselves and their wardrobe. By uploading a picture, the AI detects features such as skin tone, body shape, and clothing style, then provides personalized outfit recommendations for different occasions...</p>
+        <a href="#" class="btn hover-grow">Meet Kalos</a>
+      </div>
     </div>
   </section>
 
-  <footer class="footer">
-    <h1>KALOS</h1>
-  </footer>
+  <section class="newsletter">
+        <div class="newsletter-content">
+            <h3>STAY UPDATED</h3>
+            <p>Subscribe to our newsletter for exclusive offers and new collection previews.</p>
+            <form class="newsletter-form">
+                <input type="email" placeholder="Your email address" required>
+                <button type="submit">SUBSCRIBE</button>
+            </form>
+        </div>
+    </section>
 
-  <script>
-    // Scroll Animation
-    const fadeEls = document.querySelectorAll('.fade-in');
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>KALOS</h3>
+                <p>Premium fashion for the modern individual. Crafted with care, designed for life.</p>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>SHOP</h3>
+                <a href="#">New Arrivals</a>
+                <a href="#">Best Sellers</a>
+                <a href="#">Sale</a>
+                <a href="#">Lookbook</a>
+            </div>
+            <div class="footer-section">
+                <h3>HELP</h3>
+                <a href="#">Shipping & Returns</a>
+                <a href="#">Size Guide</a>
+                <a href="#">FAQs</a>
+                <a href="#">Contact Us</a>
+            </div>
+            <div class="footer-section">
+                <h3>ABOUT</h3>
+                <a href="#">Our Story</a>
+                <a href="#">Sustainability</a>
+                <a href="#">Careers</a>
+                <a href="#">Press</a>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2023 KALOS. All rights reserved.</p>
+        </div>
+    </footer>
 
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if(entry.isIntersecting){
-          entry.target.classList.add('visible');
-        }
-      });
-    }, {
-      rootMargin: '0px',
-      threshold: 0.1 // Mulai tampil saat 10% elemen terlihat
-    });
-
-    fadeEls.forEach(el => {
-      observer.observe(el);
-    });
-  </script>
+  <script src="../JS/Home Page.js"></script>
 </body>
 </html>
