Rename homepage.html to index.html and update links

--- a/src/HTML/colection.html
+++ b/src/HTML/colection.html
@@ -11,7 +11,7 @@
     <!-- Navbar -->
     <header class="navbar">
         <div class="nav-left">
-            <a href="../HTML/Home Page.html">Shop</a>
+            <a href="../HTML/index.html">Shop</a>
             <a href="../HTML/colection.html">Our Collection</a>
         </div>
         <div class="nav-center">
@@ -19,7 +19,7 @@
         </div>
         <div class="nav-right">
             <a href="../HTML/colection.html">New Collection</a>
-            <a href="../HTML/Home Page.html">Kalos</a>
+            <a href="../HTML/index.html">Kalos</a>
         </div>
     </header>
 
