--- a/colection.html
+++ b/colection.html
@@ -4,39 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KALOS - Premium Collection</title>
-    <link rel="stylesheet" href="../CSS/Colection.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="src/CSS/Colection.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Navbar -->
     <header class="navbar">
         <div class="nav-left">
-            <a href="../../index.html">Shop</a>
-            <a href="../HTML/colection.html">Our Collection</a>
+            <a href="index.html">Shop</a>
+            <a href="colection.html">Our Collection</a>
         </div>
         <div class="nav-center">
             <h1>KALOS</h1>
         </div>
         <div class="nav-right">
-            <a href="../HTML/colection.html">New Collection</a>
-            <a href="../../index.html">Kalos</a>
+            <a href="colection.html">New Collection</a>
+            <a href="index.html">Kalos</a>
         </div>
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
-       <h2>BRAND NEW<br>COLLECTION</h2>
+        <h2>BRAND NEW<br>COLLECTION</h2>
         <p>Discover our latest premium fashion collection, crafted with attention to detail and timeless elegance.</p>
-        <img src="../../asset/plane.png" alt="Plane" class="plane">
+        <img src="asset/plane.png" alt="Plane" class="plane">
         <div class="hero-items">
             <div class="hero-item1">
-                <img src="../../asset/baju1.png" alt="Shirt 1">
+                <img src="asset/baju1.png" alt="Shirt 1">
             </div>
             <div class="hero-item2">
-                <img src="../../asset/baju 3.png" alt="Shirt 2">
+                <img src="asset/baju 3.png" alt="Shirt 2">
             </div>
             <div class="hero-item3">
-                <img src="../../asset/baju 2.png" alt="Shirt 3">
+                <img src="asset/baju 2.png" alt="Shirt 3">
             </div>
         </div>
     </section>
@@ -47,32 +48,32 @@
     <!-- Collection Grid -->
     <section class="collection">
         <div class="item">
-            <img src="../../asset/baju1.png" alt="Shirt">
+            <img src="asset/baju1.png" alt="Shirt">
             <p>CLASSIC WHITE SHIRT</p>
             <div class="price">$89.99</div>
         </div>
         <div class="item">
-            <img src="../../asset/baju1.png" alt="Shirt">
+            <img src="asset/baju1.png" alt="Shirt">
             <p>NAVY PREMIUM BLOUSE</p>
             <div class="price">$79.99</div>
         </div>
         <div class="item">
-            <img src="../../asset/baju1.png" alt="Shirt">
+            <img src="asset/baju1.png" alt="Shirt">
             <p>ELEGANT BLACK TOP</p>
             <div class="price">$94.99</div>
         </div>
         <div class="item">
-            <img src="../../asset/baju1.png" alt="Shirt">
+            <img src="asset/baju1.png" alt="Shirt">
             <p>OFF-WHITE CASUAL</p>
             <div class="price">$69.99</div>
         </div>
         <div class="item">
-            <img src="../../asset/baju1.png" alt="Shirt">
+            <img src="asset/baju1.png" alt="Shirt">
             <p>DEEP BLUE CLASSIC</p>
             <div class="price">$84.99</div>
         </div>
         <div class="item">
-            <img src="../../asset/baju1.png" alt="Shirt">
+            <img src="asset/baju1.png" alt="Shirt">
             <p>BLACK PREMIUM</p>
             <div class="price">$99.99</div>
         </div>
@@ -130,6 +131,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- JS -->
+    <script src="src/JS/Colection.js"></script>
 </body>
 </html>
