--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KALOS</title>
-  <link rel="stylesheet" href="/src/CSS/Home Page.css">
+  <link rel="stylesheet" href="src/CSS/Home Page.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
@@ -20,20 +20,20 @@
   <header class="navbar">
         <div class="nav-left">
             <a href="index.html">Shop</a>
-            <a href="/src/HTML/colection.html">Our Collection</a>
+            <a href="colection.html">Our Collection</a>
         </div>
         <div class="nav-center">
             <h1>KALOS</h1>
         </div>
         <div class="nav-right">
-            <a href="/src/HTML/colection.html">New Collection</a>
+            <a href="colection.html">New Collection</a>
             <a href="index.html">Kalos</a>
         </div>
     </header>
 
   <!-- Hero Section -->
   <section class="hero fade-in">
-    <img src="/asset/FotoModel.jpg" alt="Hero Image">
+    <img src="asset/FotoModel.jpg" alt="Hero Image">
     <div class="hero-text">
       <h1>SEE OUR BRAND NEW<br>COLLECTION</h1>
       <a href="#" class="btn hover-grow">See More</a>
@@ -45,17 +45,17 @@
     <h2 class="section-title">READY-TO-WEAR</h2>
     <div class="product-grid">
       <div class="product-card hover-up">
-        <img src="/asset/baju1.png" alt="Baju">
+        <img src="asset/baju1.png" alt="Baju">
         <h3>BAJU</h3>
         <a href="#" class="see-more">See more →</a>
       </div>
       <div class="product-card hover-up">
-        <img src="/asset/baju 2.png" alt="Baju">
+        <img src="asset/baju 2.png" alt="Baju">
         <h3>BAJU</h3>
         <a href="#" class="see-more">See more →</a>
       </div>
       <div class="product-card hover-up">
-        <img src="/asset/baju 3.png" alt="Baju">
+        <img src="asset/baju 3.png" alt="Baju">
         <h3>BAJU</h3>
         <a href="#" class="see-more">See more →</a>
       </div>
@@ -71,7 +71,7 @@
     </div>
 
     <div class="Gambar-Baju">
-      <img src="/asset/baju 2.png" alt="BAJUU">
+      <img src="asset/baju 2.png" alt="BAJUU">
     </div>
 
   <div class="road-section">
@@ -90,7 +90,7 @@
   <section class="about fade-in">
     <div class="about-content">
       <div class="about-img">
-        <img src="/asset/AI.png" alt="Meet Kalos">
+        <img src="asset/AI.png" alt="Meet Kalos">
       </div>
       <div class="about-text">
         <h2>MEET KALOS</h2>
@@ -151,6 +151,6 @@
         </div>
     </footer>
 
-  <script src="/src/JS/Home Page.js"></script>
+  <script src="src/JS/Home Page.js"></script>
 </body>
 </html>
